--- a/api/package.json
+++ b/api/package.json
@@ -1,11 +1,19 @@
 {
-  "name": "e-comerce-metode-api",
-  "module": "index.ts",
-  "type": "module",
-  "devDependencies": {
-    "@types/bun": "latest"
+  "name": "api",
+  "scripts": {
+    "dev": "bun run --hot src/index.ts"
   },
-  "peerDependencies": {
-    "typescript": "^5.0.0"
+  "dependencies": {
+    "@prisma/client": "6.1.0",
+    "hono": "^4.6.15",
+    "winston": "^3.17.0",
+    "zod": "^3.24.1"
+  },
+  "devDependencies": {
+    "@types/bun": "latest",
+    "prisma": "6.1.0"
+  },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   }
 }
