--- a/api/package.json
+++ b/api/package.json
@@ -14,6 +14,6 @@
     "prisma": "6.1.0"
   },
   "prisma": {
-    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seeder"
   }
 }
