--- a/api/package.json
+++ b/api/package.json
@@ -11,12 +11,15 @@
   },
   "devDependencies": {
     "@types/bun": "latest",
-    "globals": "^15.14.0",
-    "prisma": "6.1.0",
-    "typescript-eslint": "^8.19.1"
+    "prisma": "6.1.0"
   },
   "prisma": {
     "seed": "bun prisma/seeder/index.ts",
     "schema": "prisma/schema"
+  },
+  "module": "index.ts",
+  "type": "module",
+  "peerDependencies": {
+    "typescript": "^5.0.0"
   }
 }
