--- a/api/package.json
+++ b/api/package.json
@@ -4,6 +4,7 @@
     "dev": "bun run --hot src/index.ts"
   },
   "dependencies": {
+    "@hono/zod-validator": "^0.4.2",
     "@prisma/client": "6.1.0",
     "hono": "^4.6.15",
     "winston": "^3.17.0",
