--- a/api/package.json
+++ b/api/package.json
@@ -7,6 +7,7 @@
     "@hono/zod-validator": "^0.4.2",
     "@prisma/client": "6.1.0",
     "hono": "^4.6.15",
+    "path": "^0.12.7",
     "winston": "^3.17.0",
     "zod": "^3.24.1"
   },
