--- a/vue/package.json
+++ b/vue/package.json
@@ -12,13 +12,16 @@
   "dependencies": {
     "@fortawesome/vue-fontawesome": "^3.0.8",
     "@primevue/themes": "^4.2.5",
+    "@tailwindcss/vite": "^4.0.3",
     "aos": "^3.0.0-beta.6",
     "axios": "^1.7.9",
     "date-fns": "^3.6.0",
     "lineicons": "^1.3.2",
     "nprogress": "^0.2.0",
     "pinia": "^2.3.0",
+    "primeicons": "^7.0.0",
     "primevue": "^4.2.5",
+    "tailwindcss": "^4.0.3",
     "vee-validate": "^4.12.5",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
