--- a/vue/package.json
+++ b/vue/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@fortawesome/vue-fontawesome": "^3.0.8",
     "@primevue/themes": "^4.2.5",
-    "@tailwindcss/vite": "^4.0.3",
+    "@tailwindcss/vite": "^4.0.8",
     "aos": "^3.0.0-beta.6",
     "axios": "^1.7.9",
     "date-fns": "^3.6.0",
@@ -21,7 +21,8 @@
     "pinia": "^2.3.0",
     "primeicons": "^7.0.0",
     "primevue": "^4.2.5",
-    "tailwindcss": "^4.0.3",
+    "tailwindcss": "^4.0.8",
+    "tailwindcss-primeui": "^0.5.0",
     "vee-validate": "^4.12.5",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
@@ -36,6 +37,6 @@
     "jsdom": "^25.0.1",
     "vite": "^6.0.5",
     "vite-plugin-vue-devtools": "^7.6.8",
-    "vitest": "^2.1.8"
+    "vitest": "^3.0.7"
   }
 }
