--- a/vue/package.json
+++ b/vue/package.json
@@ -25,6 +25,7 @@
     "tailwindcss-primeui": "^0.5.0",
     "vee-validate": "^4.12.5",
     "vue": "^3.5.13",
+    "vue-picture-cropper": "^0.7.0",
     "vue-router": "^4.5.0",
     "vue-select": "^4.0.0-beta.6",
     "vue3-count-to": "^1.1.2",
