berhasil lakukan order keranjang

--- a/api/package.json
+++ b/api/package.json
@@ -1,11 +1,13 @@
 {
   "name": "api",
   "scripts": {
-    "dev": "bun run --hot src/index.ts"
+    "dev": "bun run --hot src/index.ts",
+    "list-routes": "bun run src/app/list-routes.ts"
   },
   "dependencies": {
     "@hono/zod-validator": "^0.4.2",
     "@prisma/client": "6.1.0",
+    "chalk": "^5.4.1",
     "hono": "^4.6.15",
     "path": "^0.12.7",
     "winston": "^3.17.0",
